--- a/app/views/hello_world/action.html.erb
+++ b/app/views/hello_world/action.html.erb
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<form action="/hello_world/action" method="get" target="_blank">
+<form action="/hello_world/index" method="get" target="_blank">
   First name: <input type="text" name="fname"><br>
   Last name: <input type="text" name="lname"><br>
   <input type="submit" value="Submit">
